# api_google_cloud

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/postgres/: docker-compose.yaml
src/api_google_cloud/app/: main.py
src/api_google_cloud/app/db/: database_client.py  models.py
src/api_google_cloud/database/: create_tables.py  db.py  populate_tables.py
