[project]
name = "api_google_cloud"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Levy Marques Nunes", email = "levy.vix@gmail.com"},
]
dependencies = [
    "sqlalchemy>=2.0.32",
    "psycopg2-binary>=2.9.9",
    "faker>=27.0.0",
    "fastapi[all]>=0.112.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[tool.pyright]
venvPath = "."
venv = ".venv"
